Initial Proxomx functionality
* Added shebang for reliability

* Initial Proxmox functionality

* Fixed CIMC mount on some versions due to missing /

---------
